# adgrid

./: CMakeLists.txt  README.md  adaptive_mesh_refinement.sln  adaptive_mesh_refinement.vcxproj  adaptive_mesh_refinement.vcxproj.filters  adgrid.sln  adgrid.vcxproj  adgrid.vcxproj.filters
adgrid/x64/Debug/adgrid.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  adgrid.lastbuildstate
adgrid/x64/Release/adgrid.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  adgrid.lastbuildstate
app/: gridgen.cpp
data/Figure1/: fig1a.bat  fig1a.sh  fig1b.sh
data/Figure10/: fig10d.bat  fig10d.sh
data/Figure11/: fig11b.bat  fig11b.sh
data/Figure13/: fig13b.bat  fig13b.sh
data/Figure14/: fig14b.bat  fig14b.sh
data/Figure15/: fig15.bat  fig15.sh
data/Figure18/: fig18.bat  fig18.sh
data/Figure19/: fig19.sh  key.json
data/Figure2/: fig2d.bat  fig2d.sh
data/Figure20/: fig20a.sh
data/Figure21/: fig21a.bat  fig21a.sh
data/Figure22/: fig22a.bat  fig22a.sh  fig22b.bat  fig22b.sh
src/: adaptive_grid_gen.h  grid_mesh.h  grid_refine.cpp  grid_refine.h  io.cpp  io.h  refine_crit.cpp  refine_crit.h  timer.h
src/3rd/mtet/: MTetMeshImpl.h  io.cpp
src/3rd/nanothread/: nanothread.cpp
tests/: test_grid_gen.cpp
